==> TiagoMostardinha/ase_rtos_project/boat/main/bme280.c <==
#include "bme280.h"

esp_err_t get_calib_data(struct bme280_dev *dev)
{
    esp_err_t err;

    /* Read the calibration data for  from the sensor */
    uint8_t reg_addr = BME280_TEMP_PRESS_CALIB_DATA_ADDR;
    uint8_t calib_data[BME280_TEMP_PRESS_CALIB_DATA_LEN];

    err = bme280_get_regs(reg_addr, calib_data, BME280_TEMP_PRESS_CALIB_DATA_LEN, dev);
    if (err != ESP_OK)
    {
        return err;
    }

    dev->calib_data.dig_T1 = BME280_CONCAT_BYTES(calib_data[1], calib_data[0]);
    dev->calib_data.dig_T2 = (int16_t)BME280_CONCAT_BYTES(calib_data[3], calib_data[2]);
    dev->calib_data.dig_T3 = (int16_t)BME280_CONCAT_BYTES(calib_data[5], calib_data[4]);
    dev->calib_data.dig_P1 = BME280_CONCAT_BYTES(calib_data[7], calib_data[6]);
    dev->calib_data.dig_P2 = (int16_t)BME280_CONCAT_BYTES(calib_data[9], calib_data[8]);
    dev->calib_data.dig_P3 = (int16_t)BME280_CONCAT_BYTES(calib_data[11], calib_data[10]);
    dev->calib_data.dig_P4 = (int16_t)BME280_CONCAT_BYTES(calib_data[13], calib_data[12]);
    dev->calib_data.dig_P5 = (int16_t)BME280_CONCAT_BYTES(calib_data[15], calib_data[14]);
    dev->calib_data.dig_P6 = (int16_t)BME280_CONCAT_BYTES(calib_data[17], calib_data[16]);
    dev->calib_data.dig_P7 = (int16_t)BME280_CONCAT_BYTES(calib_data[19], calib_data[18]);
    dev->calib_data.dig_P8 = (int16_t)BME280_CONCAT_BYTES(calib_data[21], calib_data[20]);
    dev->calib_data.dig_P9 = (int16_t)BME280_CONCAT_BYTES(calib_data[23], calib_data[22]);
    dev->calib_data.dig_H1 = calib_data[25];

    reg_addr = BME280_HUMIDITY_CALIB_DATA_ADDR;
    err = bme280_get_regs(reg_addr, calib_data, BME280_HUMIDITY_CALIB_DATA_LEN, dev);
    if (err != ESP_OK)
    {
        return err;
    }

    dev->calib_data.dig_H2 = (int16_t)BME280_CONCAT_BYTES(calib_data[1], calib_data[0]);
    dev->calib_data.dig_H3 = calib_data[2];
    dev->calib_data.dig_H4 = (int16_t)(((int16_t)(int8_t)calib_data[3] * 16) | ((int16_t)(calib_data[4] & 0x0F)));
    dev->calib_data.dig_H5 = (int16_t)(((int16_t)(int8_t)calib_data[5] * 16) | ((int16_t)(calib_data[4] >> 4)));
    dev->calib_data.dig_H6 = (int8_t)calib_data[6];

    return ESP_OK;
}

int32_t compensate_temperature(const struct bme280_uncomp_data *uncomp_data, struct bme280_calib_data *calib_data)
{
    int32_t var1;
    int32_t var2;
    int32_t temperature;
    int32_t temperature_min = -4000;
    int32_t temperature_max = 8500;

    var1 = (int32_t)((uncomp_data->temperature / 8) - ((int32_t)calib_data->dig_T1 * 2));
    var1 = (var1 * ((int32_t)calib_data->dig_T2)) / 2048;
    var2 = (int32_t)((uncomp_data->temperature / 16) - ((int32_t)calib_data->dig_T1));
    var2 = (((var2 * var2) / 4096) * ((int32_t)calib_data->dig_T3)) / 16384;
    calib_data->t_fine = var1 + var2;
    temperature = (calib_data->t_fine * 5 + 128) / 256;

    if (temperature < temperature_min)
        temperature = temperature_min;
    else if (temperature > temperature_max)
        temperature = temperature_max;

    return temperature;
}

uint32_t compensate_pressure(const struct bme280_uncomp_data *uncomp_data,
                             const struct bme280_calib_data *calib_data)
{
    int32_t var1;
    int32_t var2;
    int32_t var3;
    int32_t var4;
    uint32_t var5;
    uint32_t pressure;
    uint32_t pressure_min = 30000;
    uint32_t pressure_max = 110000;

    var1 = (((int32_t)calib_data->t_fine) / 2) - (int32_t)64000;
    var2 = (((var1 / 4) * (var1 / 4)) / 2048) * ((int32_t)calib_data->dig_P6);
    var2 = var2 + ((var1 * ((int32_t)calib_data->dig_P5)) * 2);
    var2 = (var2 / 4) + (((int32_t)calib_data->dig_P4) * 65536);
    var3 = (calib_data->dig_P3 * (((var1 / 4) * (var1 / 4)) / 8192)) / 8;
    var4 = (((int32_t)calib_data->dig_P2) * var1) / 2;
    var1 = (var3 + var4) / 262144;
    var1 = (((32768 + var1)) * ((int32_t)calib_data->dig_P1)) / 32768;

    if (var1)
    {
        var5 = (uint32_t)((uint32_t)1048576) - uncomp_data->pressure;
        pressure = ((uint32_t)(var5 - (uint32_t)(var2 / 4096))) * 3125;
        if (pressure < 0x80000000)
            pressure = (pressure << 1) / ((uint32_t)var1);
        else
            pressure = (pressure / (uint32_t)var1) * 2;

        var1 = (((int32_t)calib_data->dig_P9) * ((int32_t)(((pressure / 8) * (pressure / 8)) / 8192))) / 4096;
        var2 = (((int32_t)(pressure / 4)) * ((int32_t)calib_data->dig_P8)) / 8192;
        pressure = (uint32_t)((int32_t)pressure + ((var1 + var2 + calib_data->dig_P7) / 16));

        if (pressure < pressure_min)
            pressure = pressure_min;
        else if (pressure > pressure_max)
            pressure = pressure_max;
    }
    else
    {
        pressure = pressure_min;
    }

    return pressure;
}

uint32_t compensate_humidity(const struct bme280_uncomp_data *uncomp_data,
                             const struct bme280_calib_data *calib_data)
{
    int32_t var1;
    int32_t var2;
    int32_t var3;
    int32_t var4;
    int32_t var5;
    uint32_t humidity;
    uint32_t humidity_max = 102400;

    var1 = calib_data->t_fine - ((int32_t)76800);
    var2 = (int32_t)(uncomp_data->humidity * 16384);
    var3 = (int32_t)(((int32_t)calib_data->dig_H4) * 1048576);
    var4 = ((int32_t)calib_data->dig_H5) * var1;
    var5 = (((var2 - var3) - var4) + (int32_t)16384) / 32768;
    var2 = (var1 * ((int32_t)calib_data->dig_H6)) / 1024;
    var3 = (var1 * ((int32_t)calib_data->dig_H3)) / 2048;
    var4 = ((var2 * (var3 + (int32_t)32768)) / 1024) + (int32_t)2097152;
    var2 = ((var4 * ((int32_t)calib_data->dig_H2)) + 8192) / 16384;
    var3 = var5 * var2;
    var4 = ((var3 / 32768) * (var3 / 32768)) / 128;
    var5 = var3 - ((var4 * ((int32_t)calib_data->dig_H1)) / 16);
    var5 = (var5 < 0 ? 0 : var5);
    var5 = (var5 > 419430400 ? 419430400 : var5);
    humidity = (uint32_t)(var5 / 4096);

    if (humidity > humidity_max)
        humidity = humidity_max;

    return humidity;
}

esp_err_t bme280_get_sensor_data(uint8_t sensor_comp_mode, struct bme280_data *data, struct bme280_dev *dev)
{
    esp_err_t err;
    uint8_t reg_data[BME280_P_T_H_DATA_LEN] = {0};
    struct bme280_uncomp_data uncomp_data = {0};

    err = bme280_get_regs(BME280_DATA_ADDR, reg_data, BME280_P_T_H_DATA_LEN, dev);
    if (err != ESP_OK)
    {
        return err;
    }

    bme280_parse_sensor_data(reg_data, &uncomp_data);

    struct bme280_comp_data comp_data = {0};

    err = bme280_compensate_data(sensor_comp_mode, &uncomp_data, &comp_data, &dev->calib_data);
    if (err != ESP_OK)
    {
        return err;
    }

    data->temperature = comp_data.temperature / 100.0;
    data->pressure = comp_data.pressure / 256.0 / 100.0;
    data->humidity = comp_data.humidity / 1024.0;

    return ESP_OK;
}

esp_err_t bme280_init(struct bme280_dev *dev, uint32_t slave_addr, uint8_t sda, uint8_t scl, uint32_t clk_freq)
{
    i2c_master_bus_handle_t bus_handle;
    i2c_master_dev_handle_t dev_handle;
    esp_err_t err;

    i2c_master_bus_config_t i2c_mst_config = {
        .clk_source = I2C_CLK_SRC_DEFAULT,
        .sda_io_num = sda,
        .scl_io_num = scl,
        .glitch_ignore_cnt = 7,
        .flags.enable_internal_pullup = true,
    };

    err = ESP_ERROR_CHECK_WITHOUT_ABORT(i2c_new_master_bus(&i2c_mst_config, &bus_handle));
    if (err != ESP_OK)
    {
        return err;
    }

    i2c_device_config_t i2c_dev_config = {
        .dev_addr_length = I2C_ADDR_BIT_7,
        .device_address = slave_addr,
        .scl_speed_hz = clk_freq,
    };

    err = ESP_ERROR_CHECK_WITHOUT_ABORT(i2c_master_bus_add_device(bus_handle, &i2c_dev_config, &dev_handle));
    if (err != ESP_OK)
    {
        return err;
    }

    dev->i2c_bus_handle = bus_handle;
    dev->i2c_dev_handle = dev_handle;

    uint8_t sensor_id;
    err = bme280_get_sensor_id(&sensor_id, dev);
    if (err != ESP_OK)
    {
        return err;
    }

    if (sensor_id != BME280_CHIP_ID)
    {
        return ESP_ERR_INVALID_RESPONSE;
    }

    dev->chip_id = sensor_id;

    err = bme280_soft_reset(dev);
    if (err != ESP_OK)
    {
        return err;
    }

    return ESP_OK;
}
