==> jaindinkar/STM32_HAL_BME280_DRV/src/.settings/Core/Src/BME280.c <==
#include "BME280.h"

static HAL_StatusTypeDef get_calib_data(bme280 *dev)
{
	HAL_StatusTypeDef rslt;
    uint8_t reg_addr = BME280_G1_CALIB_DATA_START;

    /* Array to store calibration data */
    uint8_t calib_data[BME280_G1_CALIB_DATA_LEN] = { 0 };

    /* Read the calibration data from the sensor */
    // I2C call.
    rslt = bme280_ReadRegisters(dev, reg_addr, calib_data, BME280_G1_CALIB_DATA_LEN);

    if (rslt == HAL_OK)
    {
        /* Parse temperature and pressure calibration data and store
         * it in device structure
         */
        parse_g1_calib_data(dev, calib_data);
        reg_addr = BME280_G2_CALIB_DATA_START;

        /* Read the humidity calibration data from the sensor */
        // I2C call.
        rslt = bme280_ReadRegisters(dev, reg_addr, calib_data, BME280_G2_CALIB_DATA_LEN);

        if (rslt == HAL_OK)
        {
            /* Parse humidity calibration data and store it in
             * device structure
             */
            parse_g2_calib_data(dev, calib_data);
        }
    }

    return rslt;
}

static uint32_t compensate_pressure(const struct bme280_uncomp_data *uncomp_data, const struct bme280_calib_data *calib_data)
{
    int32_t var1;
    int32_t var2;
    int32_t var3;
    int32_t var4;
    uint32_t var5;
    uint32_t pressure;
    uint32_t pressure_min = 30000;
    uint32_t pressure_max = 110000;

    var1 = (((int32_t)calib_data->t_fine) / 2) - (int32_t)64000;
    var2 = (((var1 / 4) * (var1 / 4)) / 2048) * ((int32_t)calib_data->dig_p6);
    var2 = var2 + ((var1 * ((int32_t)calib_data->dig_p5)) * 2);
    var2 = (var2 / 4) + (((int32_t)calib_data->dig_p4) * 65536);
    var3 = (calib_data->dig_p3 * (((var1 / 4) * (var1 / 4)) / 8192)) / 8;
    var4 = (((int32_t)calib_data->dig_p2) * var1) / 2;
    var1 = (var3 + var4) / 262144;
    var1 = (((32768 + var1)) * ((int32_t)calib_data->dig_p1)) / 32768;

    /* avoid exception caused by division by zero */
    if (var1)
    {
        var5 = (uint32_t)((uint32_t)1048576) - uncomp_data->pressure;
        pressure = ((uint32_t)(var5 - (uint32_t)(var2 / 4096))) * 3125;

        if (pressure < 0x80000000)
        {
            pressure = (pressure << 1) / ((uint32_t)var1);
        }
        else
        {
            pressure = (pressure / (uint32_t)var1) * 2;
        }

        var1 = (((int32_t)calib_data->dig_p9) * ((int32_t)(((pressure / 8) * (pressure / 8)) / 8192))) / 4096;
        var2 = (((int32_t)(pressure / 4)) * ((int32_t)calib_data->dig_p8)) / 8192;
        pressure = (uint32_t)((int32_t)pressure + ((var1 + var2 + calib_data->dig_p7) / 16));

        if (pressure < pressure_min)
        {
            pressure = pressure_min;
        }
        else if (pressure > pressure_max)
        {
            pressure = pressure_max;
        }
    }
    else
    {
        pressure = pressure_min;
    }

    return pressure;
}

static int32_t compensate_temperature(const struct bme280_uncomp_data *uncomp_data,
                                      struct bme280_calib_data *calib_data)
{
    int32_t var1;
    int32_t var2;
    int32_t temperature;
    int32_t temperature_min = -4000;
    int32_t temperature_max = 8500;

    var1 = (int32_t)((uncomp_data->temperature / 8) - ((int32_t)calib_data->dig_t1 * 2));
    var1 = (var1 * ((int32_t)calib_data->dig_t2)) / 2048;
    var2 = (int32_t)((uncomp_data->temperature / 16) - ((int32_t)calib_data->dig_t1));
    var2 = (((var2 * var2) / 4096) * ((int32_t)calib_data->dig_t3)) / 16384;
    calib_data->t_fine = var1 + var2;
    temperature = (calib_data->t_fine * 5 + 128) / 256;

    if (temperature < temperature_min)
    {
        temperature = temperature_min;
    }
    else if (temperature > temperature_max)
    {
        temperature = temperature_max;
    }

    return temperature;
}

static uint32_t compensate_humidity(const struct bme280_uncomp_data *uncomp_data,
                                    const struct bme280_calib_data *calib_data)
{
    int32_t var1;
    int32_t var2;
    int32_t var3;
    int32_t var4;
    int32_t var5;
    uint32_t humidity;
    uint32_t humidity_max = 102400;

    var1 = calib_data->t_fine - ((int32_t)76800);
    var2 = (int32_t)(uncomp_data->humidity * 16384);
    var3 = (int32_t)(((int32_t)calib_data->dig_h4) * 1048576);
    var4 = ((int32_t)calib_data->dig_h5) * var1;
    var5 = (((var2 - var3) - var4) + (int32_t)16384) / 32768;
    var2 = (var1 * ((int32_t)calib_data->dig_h6)) / 1024;
    var3 = (var1 * ((int32_t)calib_data->dig_h3)) / 2048;
    var4 = ((var2 * (var3 + (int32_t)32768)) / 1024) + (int32_t)2097152;
    var2 = ((var4 * ((int32_t)calib_data->dig_h2)) + 8192) / 16384;
    var3 = var5 * var2;
    var4 = ((var3 / 32768) * (var3 / 32768)) / 128;
    var5 = var3 - ((var4 * ((int32_t)calib_data->dig_h1)) / 16);
    var5 = (var5 < 0 ? 0 : var5);
    var5 = (var5 > 419430400 ? 419430400 : var5);
    humidity = (uint32_t)(var5 / 4096);

    if (humidity > humidity_max)
    {
        humidity = humidity_max;
    }

    return humidity;
}

uint8_t bme280_Init(bme280 *dev, I2C_HandleTypeDef *i2cHandle){

	//Setting structure parameters
	dev->i2cHandle = i2cHandle;

	/* Store number of transaction errors. */
	uint8_t errCount = 0;
	HAL_StatusTypeDef status;

	// A reusable 8 bit tx/rx buffer.
	uint8_t regData;
	// Check for the chip ID
	status = bme280_ReadRegister(dev, BME280_REGISTER_CHIPID, &regData);
	errCount += (status != HAL_OK);
	if(regData != BME280_CHIP_ID) return 255;

	/* Reading the calibration data and storing it in structure */
	get_calib_data(dev);

	/* Setting the configuration data. Please MAINTAIN the order.*/

	// 1). Setting configuration data t_stdby for normal mode, tc for IIR filter, SPI mode(if enabled)
	// t_stdby = 0.5ms(000), tc for IIR filter = 4(010), reserved_bit(0), spi_mode = 0  0b00001000
	// regData = 0b00001000;
	// status = bme280_WriteRegister(dev, BME280_REGISTER_CONFIG, &regData);
	// errCount += (status != HAL_OK);

	// 2). Setting Humidity measurement parameters -> oversampling = x8(100)  0b100
	regData = 0b100;
	status = bme280_WriteRegister(dev, BME280_REGISTER_CONTROL_HUMID, &regData);
	errCount += (status != HAL_OK);

	// 3). Setting Pressure, Temperature measurement parameters + measurement modes.
	// p_oversampling = x8 (100), t_oversampling = x8(100), mode = normal(11) 0b10010011
	regData = 0b10010011;
	status = bme280_WriteRegister(dev, BME280_REGISTER_CONTROL_PTMOD, &regData);
	errCount += (status != HAL_OK);

	/* errCount = 0 for successful initialization. */
	return errCount;

}

HAL_StatusTypeDef bme280_get_sensor_data(bme280 *dev, struct bme280_data *comp_data) {
	uint8_t reg_data[BME280_SENSOR_DATA_LEN] = { 0 };
	struct bme280_uncomp_data uncomp_data = { 0 };

	HAL_StatusTypeDef rslt = bme280_ReadRegisters(dev, BME280_SENSOR_DATA_START, reg_data, BME280_SENSOR_DATA_LEN);

	if (rslt == HAL_OK)
	{
		/* Parse the read data from the sensor */
		bme280_parse_sensor_data(reg_data, &uncomp_data);

		/* Compensate the pressure and/or temperature and/or
		 * humidity data from the sensor
		 */
		bme280_compensate_data(&uncomp_data, comp_data, &dev->calib_data);
	}

	return rslt;

}
